# rvLLM

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.validate  LICENSE  Makefile  README.md  docker-compose.yaml  fp8_gemm_debug_spec.md  fp8_precision_check.py  index.html  install.sh
LICENSES/: Apache-2.0-mlx  Apache-2.0-transformers  BSD-3-Clause-FlashAttention
chat-client/: Cargo.toml
chat-client/src/: api.rs  app.rs  main.rs  theme.rs
deploy/: .gitignore  benchmark_client.py  requirements.txt
docs/: arch.md  autokernel-fit.md  bench.html  benchmark-history.md  current-forward-model.md  profiling.md  single-card-max-vram-inference.md
kernels/: README.md  add_bias_f16.cu  (+37 more)
tpu/: .gitignore  Makefile  README.md  SPEC.md  manifest.toml  pyproject.toml
tpu/harness/: DFLASH_SPEC.md  EAGLE3_SPEC.md  bench_driver.py  bench_flax.py  bench_rvllm_multi.sh  bench_tpu_direct.py  cache_pull.sh  cache_push.sh  deploy_to_tpu.sh  emit_all.py  emit_bytecode.py  emit_fused_step.py  execute_all.py  gen_compile_options.py  pallas_kv_update.py  verify_all.py
tpu/ports/: __init__.py  _base.py  activation.py  attention.py  bias.py  cast.py  embedding.py  gemm.py  kv.py  megakernel.py  quant.py  reduce.py  rms_norm.py  rope.py  shape.py  softmax.py
tpu/tests/: test_attention.py  test_gemm.py
v3/: Cargo.toml  GB10_SPEC.md  GEMMA4_IMPLEMENTATION.md  GEMMA4_SPEC.md  IMPL_PLAN.md  M1_OUTCOME.md  SPEC.md  SPECDECODE_SPEC.md  SPEC_FP8_DECODE_ATTN_REWRITE.md  VALIDATION_CHECKLIST.md  deny.toml
v3/crates/rvllm-attention/: Cargo.toml
v3/crates/rvllm-attention/src/: decode.rs  lib.rs  prefill.rs
v3/crates/rvllm-bench/: Cargo.toml
v3/crates/rvllm-bench/src/: main.rs
v3/crates/rvllm-core/: Cargo.toml
v3/crates/rvllm-core/src/: arch.rs  dtype.rs  env.rs  error.rs  fp8.rs  ids.rs  lib.rs  shape.rs
v3/crates/rvllm-core/src/config/: builder.rs  hf.rs  mod.rs  model.rs  runtime.rs
v3/crates/rvllm-cutlass/: Cargo.toml
v3/crates/rvllm-cutlass/src/: cublaslt.rs  lib.rs  lib_so.rs  plan.rs  policy.rs  schedule.rs  variants.rs  w4a8.rs
v3/crates/rvllm-fused/: Cargo.toml
v3/crates/rvllm-fused/src/: fp8.rs  gemma4_launcher.rs  gemma4_reference.rs  launch_raw.rs  launcher.rs  lib.rs  reference.rs
v3/crates/rvllm-graph/: Cargo.toml
v3/crates/rvllm-graph/src/: lib.rs  pool.rs
v3/crates/rvllm-imageio/: Cargo.toml
v3/crates/rvllm-imageio/src/: lib.rs
v3/crates/rvllm-invariants/: Cargo.toml
v3/crates/rvllm-invariants/src/: lib.rs
v3/crates/rvllm-invariants/tests/: dag.rs  identity.rs
v3/crates/rvllm-kernels/: Cargo.toml
v3/crates/rvllm-kernels/src/: gb10_dispatch.rs  lib.rs  loader.rs  manifest.rs  module.rs  sigs.rs
v3/crates/rvllm-loader/: Cargo.toml
v3/crates/rvllm-loader/src/: fp8_quant.rs  gemma4_arch.rs  gemma4_load.rs  gemma4_weights.rs  lib.rs  load.rs  load_multiformat.rs  metal_host.rs  metal_loader.rs  safetensors.rs  weights.rs
v3/crates/rvllm-mcp/: Cargo.toml
v3/crates/rvllm-mcp/src/: main.rs
v3/crates/rvllm-mem/: Cargo.toml
v3/crates/rvllm-mem/src/: capture.rs  context.rs  cuda_owned.rs  event.rs  graph_safe.rs  hbm.rs  kv_layout.rs  lib.rs  metal.rs  pinned.rs  stream.rs  tensor.rs  unified.rs
v3/crates/rvllm-mem/tests/: cuda_context_smoke.rs  gb10_hw_smoke.rs
v3/crates/rvllm-metadata/: Cargo.toml
v3/crates/rvllm-metadata/src/: layout.rs  lib.rs  pack.rs  plan.rs
v3/crates/rvllm-metal/: Cargo.toml  build.rs
v3/crates/rvllm-metal/src/: device.rs  fp8_dequant.rs  gemv.rs  kernels.rs  kv_ops.rs  lib.rs  paged_attention.rs  sdpa.rs
v3/crates/rvllm-metal/src/metal_kernels/: blockwise_fp8.metal  common.metal  float8.metal  gather_kv_cache.metal  gemv.metal  pagedattention.metal  pagedattn_utils.metal  reshape_and_cache.metal  scalar_fp8.metal  softmax_sdpa.metal
v3/crates/rvllm-runtime/: Cargo.toml
v3/crates/rvllm-runtime/src/: bring_up.rs  engine.rs  gemma4_bring_up.rs  gemma4_int4.rs  gemma4_layer_exec.rs  gemma4_metal.rs  gemma4_serve.rs  layer_exec.rs  lib.rs  sched_state.rs  scheduler.rs
v3/crates/rvllm-sampling/: Cargo.toml
v3/crates/rvllm-sampling/src/: dtoh.rs  lib.rs  params.rs  sampler.rs  spec_accept.rs
v3/crates/rvllm-serve/: Cargo.toml
v3/crates/rvllm-serve/src/: http.rs  lib.rs  main.rs  openai.rs  worker.rs
v3/crates/rvllm-vision/: Cargo.toml
v3/crates/rvllm-vision/src/: chat.rs  config.rs  embedder.rs  lib.rs  loader.rs  model.rs  preprocess.rs
v3/kernels/: bf16_to_f16_sat.cu  compute_qkv_scales.cu  f32_to_bf16.cu  f32_to_f16_sat.cu  fa3_sm90_parity_bench.cu  fp8_channelscale_gemv_ktiled.cu  fp8_channelscale_gemv_splitk.cu  fp8_decode_v2.cu  fp8_decode_v2_parity_bench.cu  fp8_e4m3_gemv.cu  fused_gelu_mul_f16.cu  fused_gelu_mul_fp8_quant.cu  fused_norm_add_residual.cu  fused_norm_add_residual_f16.cu  fused_qk_rmsnorm.cu  fused_qkv_rmsnorm.cu  fused_rope_cache_fp8kv.cu  fused_rope_partial_f16kv.cu  fused_rope_partial_fp8kv.cu  gemma4_ple_gate.cu  lmhead_prune_argmax.cu  logit_softcap.cu  make_policy.py  map_token_id.cu  paged_attention_sm89.cu  ple_gelu_mul_f16.cu  ple_project_combine.cu  residual_scale_bf16s_f16.cu  residual_scale_f16.cu  rmsnorm_inplace_bf16.cu  rmsnorm_inplace_f16.cu  sample_topk_f32.cu  scale_cols_f16.cu  scale_cols_f32.cu  scale_rows_f16_pertoken.cu  scale_rows_f32_ratio.cu  sweep_variants.sh  vector_add_bf16_to_f16.cu  vector_add_f16.cu  vnorm_f16.cu
v3/scripts/: bench_sm121.sh  bench_spread.sh  gemma4_h200_deploy.sh  metal_host_decoder_guardrail.sh  spec_gate.sh
v3/specs/: 01-architecture.md  02-config.md  03-errors.md  04-memory.md  05-concurrency.md  06-loader.md  07-scheduler.md  08-metadata.md  09-layer.md  10-attention.md  11-cutlass-fp8.md  12-fused.md  13-sampling.md  14-graph.md  15-validation.md  16-deploy.md  17-cutlass-evt-norm-gemm-prologue.md  18-speculative-decoding.md  19-lm-head-fp8-passthrough.md  20-per-token-act-scales.md  21-fa3-fp8-o-epilogue.md  22-variable-head-dim.md  23-apple-tiered-metal-runtime.md
v3/tools/: fa2_precision_check.py  fp8_gemv_bench.py  fp8_mma_probe_check.py  fp8_mma_smem_probe_check.py  fp8_precision_check.py
(+41 files in other folders)
