[project]
name = "rvllm-tpu"
version = "0.0.1"
description = "StableHLO port suite for rvLLM CUDA kernels."
requires-python = ">=3.11"
dependencies = [
  "aiohttp==3.14.1",
  "jax==0.4.38",
  "jaxlib==0.4.38",
  "numpy==2.1.3",
]

[project.optional-dependencies]
tpu = ["jax[tpu]==0.4.38"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ports*", "harness*"]
