[package]
name = "rvllm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-core: zero rvllm-* deps. Defines error.rs ids.rs dtype.rs shape.rs config/.
# See v3/specs/01-architecture.md and 02-config.md and 03-errors.md.

[dependencies]
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
