[package]
name = "rvllm-imageio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
http = ["dep:reqwest", "dep:url"]
local-files = ["dep:url"]

[dependencies]
image    = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
data-url = "0.3"
thiserror = "1"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
url = { version = "2", optional = true }

[dev-dependencies]
base64 = "0.22"
