[package]
name = "rvllm-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# Safetensors parsing and checked CPU/GPU weight preparation.

[features]
default = []
cuda = ["rvllm-mem/cuda"]
metal = [
    "dep:rvllm-metal",
    "dep:safetensors",
    "dep:lru",
    "dep:parking_lot",
    "dep:metal",
    "rvllm-metal/metal",
]

[dependencies]
rvllm-core = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-metal = { workspace = true, optional = true }
half = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
memmap2 = "0.9.11"
rayon = "1.10"
safetensors = { version = "0.4", optional = true }
lru = { version = "0.16.3", optional = true }
parking_lot = { version = "0.12", optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
metal = { version = "0.27", optional = true }
