[package]
name = "rvllm-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-serve: HTTP serving loop. Reuses step_launch/step_collect.
# OpenAI-compatible API. See v3/specs/05-concurrency.md for the tokio -> worker channel design.

[[bin]]
name = "rvllm-server"
path = "src/main.rs"

[features]
default = []
cuda = [
    "rvllm-runtime/cuda",
    "rvllm-kernels/cuda",
    "rvllm-mem/cuda",
    "dep:cudarc",
]
cublaslt = ["cuda"]
gb10 = ["cuda", "rvllm-runtime/gb10", "rvllm-mem/gb10"]
metal = [
    "rvllm-runtime/metal",
    "dep:rvllm-loader",
    "dep:rvllm-metal",
    "rvllm-mem/metal",
]
vision = [
    "dep:rvllm-vision",
    "dep:rvllm-imageio",
    "dep:image",
    "dep:anyhow",
    "dep:candle-core",
]

[dependencies]
rvllm-core = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-loader = { workspace = true, optional = true }
rvllm-mem = { workspace = true, optional = true }
rvllm-metal = { workspace = true, optional = true, features = ["metal"] }
rvllm-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
rvllm-vision = { path = "../rvllm-vision", version = "=0.3.0", optional = true }
rvllm-imageio = { path = "../rvllm-imageio", version = "=0.3.0", optional = true }
image = { version = "0.25", default-features = false, optional = true }
anyhow = { version = "1", optional = true }
candle-core = { version = "0.10", optional = true, default-features = false }
